# SimpleGraphicsEngine

./: .gitignore  CMakeLists.txt
headers/: Buffer.h  Cone.h  Cube.h  Cylinder.h  DirectionalLight.h  ITgaSavable.h  Light.h  Math.h  Mesh.h  PointLight.h  Rasterizer.h  SimpleRasterizer.h  SimpleTriangle.h  Sphere.h  Texture.h  TgaBuffer.h  Torus.h  Vertex.h  VertexProcessor.h
sources/: Buffer.cpp  Cone.cpp  Cube.cpp  Cylinder.cpp  DirectionalLight.cpp  Math.cpp  Mesh.cpp  PointLight.cpp  Rasterizer.cpp  SimpleRasterizer.cpp  SimpleTriangle.cpp  Sphere.cpp  Texture.cpp  TgaBuffer.cpp  Torus.cpp  VertexProcessor.cpp  main.cpp
